hphp/hack/test/typecheck/super_constraint_10.php.exp
File "super_constraint_10.php", line 22, characters 21-25:
Some type constraint(s) here are violated (Typing[4110])
File "super_constraint_10.php", line 7, characters 42-44:
'Tk1' is a constrained type
File "super_constraint_10.php", line 7, characters 42-44:
This is a value of generic type Tk1
File "super_constraint_10.php", line 22, characters 27-31:
It was implicitly typed as a value of generic type Tk1 during this operation
File "super_constraint_10.php", line 7, characters 32-34:
It is incompatible with a value of generic type Tk2
File "super_constraint_10.php", line 22, characters 34-38:
It was implicitly typed as a value of generic type Tk2 during this operation
